Fix gridlines z-index
Grid lines were blocking the link to the AWS vs Aptible page.

--- a/source/stylesheets/_enclave.scss
+++ b/source/stylesheets/_enclave.scss
@@ -71,6 +71,7 @@ body.enclave header {
 
 .meet-enclave {
   padding: 0;
+  position: relative;
 }
 .meet-enclave__terminal {
   margin-bottom: 0;
